--- a/tiny/index.html
+++ b/tiny/index.html
@@ -328,11 +328,278 @@
             margin: 20px 0;
         }
 
-        /* Les styles de .formula-card ont été déplacés vers styles.css */
+        .formula-card {
+            background: white;
+            border-radius: 15px;
+            padding: 25px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            cursor: pointer;
+            transition: all 0.3s ease;
+            border: 2px solid transparent;
+        }
+
+        .formula-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .formula-card.selected {
+            border-color: #4CAF50;
+            box-shadow: 0 5px 15px rgba(76, 175, 80, 0.2);
+        }
 
         .formula-card h4 {
             color: #2c3e50;
             margin-bottom: 15px;
+            font-size: 1.2em;
+        }
+
+        .navigation-buttons {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 30px;
+        }
+
+        .nav-button {
+            background: #4CAF50;
+            color: white;
+            border: none;
+            padding: 12px 25px;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .nav-button:hover {
+            background: #45a049;
+            transform: translateY(-2px);
+        }
+
+        .nav-button:disabled {
+            background: #ccc;
+            cursor: not-allowed;
+            transform: none;
+        }
+
+        .result-card {
+            background: white;
+            border-radius: 15px;
+            padding: 30px;
+            text-align: center;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+
+        .result-highlight {
+            font-size: 2.5rem;
+            color: #4CAF50;
+            text-align: center;
+            margin: 15px 0;
+        }
+
+        .amount {
+            font-size: 2.5rem;
+            color: #4CAF50;
+            font-weight: 600;
+            margin: 10px 0;
+            display: inline-block;
+        }
+
+        .amount::after {
+            content: '€';
+            font-size: 0.8em;
+            font-weight: normal;
+            margin-left: 2px;
+            color: inherit;
+        }
+
+        .result-period {
+            color: #666;
+            font-size: 0.9rem;
+            text-align: center;
+        }
+
+        .result-card {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            text-align: center;
+        }
+
+        .result-card h3 {
+            color: #333;
+            margin-bottom: 15px;
+            font-size: 1.2rem;
+        }
+
+        .tooltip-trigger {
+            cursor: help;
+            color: #45B7D1;
+            margin-left: 5px;
+            font-size: 0.9em;
+        }
+
+        [data-tooltip] {
+            position: relative;
+        }
+
+        [data-tooltip]:hover::after {
+            content: attr(data-tooltip);
+            position: absolute;
+            bottom: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(44, 85, 48, 0.95);
+            color: white;
+            padding: 10px 15px;
+            border-radius: 6px;
+            font-size: 0.9rem;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 400;
+            line-height: 1.4;
+            white-space: normal;
+            max-width: 250px;
+            text-align: center;
+            z-index: 1000;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        [data-tooltip]:hover::before {
+            content: '';
+            position: absolute;
+            bottom: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            border: 8px solid transparent;
+            border-top-color: rgba(44, 85, 48, 0.95);
+            margin-bottom: -8px;
+        }
+
+        @media (max-width: 768px) {
+            [data-tooltip]:hover::after {
+                font-size: 0.85rem;
+                padding: 8px 12px;
+                max-width: 200px;
+            }
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
+        }
+
+        .simulator-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .simulator-steps {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 30px;
+            position: relative;
+        }
+
+        .step-indicator {
+            flex: 1;
+            text-align: center;
+            position: relative;
+            padding: 20px;
+        }
+
+        .step-indicator::before {
+            content: '';
+            position: absolute;
+            top: 30px;
+            left: calc(50% - 20px);
+            width: 40px;
+            height: 40px;
+            background: #4CAF50;
+            border-radius: 50%;
+            z-index: 1;
+            transition: all 0.3s ease;
+        }
+
+        .step-indicator::after {
+            content: '';
+            position: absolute;
+            top: 49px;
+            left: 50%;
+            width: 100%;
+            height: 2px;
+            background: #e0e0e0;
+            z-index: 0;
+        }
+
+        .step-indicator:last-child::after {
+            display: none;
+        }
+
+        .step-indicator.active::before {
+            transform: scale(1.2);
+            box-shadow: 0 0 0 5px rgba(76, 175, 80, 0.2);
+        }
+
+        .step-number {
+            color: white;
+            position: relative;
+            z-index: 2;
+            font-weight: bold;
+        }
+
+        .step-title {
+            margin-top: 35px;
+            color: #2c3e50;
+            font-weight: 500;
+        }
+
+        .step-content {
+            display: none;
+            opacity: 0;
+            transform: translateY(20px);
+            transition: all 0.5s ease;
+        }
+
+        .step-content.active {
+            display: block;
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .card-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            margin: 20px 0;
+        }
+
+        .formula-card {
+            background: white;
+            border-radius: 15px;
+            padding: 25px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            cursor: pointer;
+            transition: all 0.3s ease;
+            border: 2px solid transparent;
+        }
+
+        .formula-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .formula-card.selected {
+            border-color: #4CAF50;
+            box-shadow: 0 5px 15px rgba(76, 175, 80, 0.2);
+        }
+
+        .formula-card h4 {
+            color: #2c3e50;
+            margin-bottom: 15px;
+            font-size: 1.2em;
         }
 
         .navigation-buttons {
@@ -585,19 +852,19 @@
     <section id="concept" class="fade-in">
         <h2 class="gradient-text">Notre Concept</h2>
         <div class="concept-grid">
-            <div class="presentation-card glass-effect">
-                <i class="fas fa-leaf"></i>
-                <h3>Écologique</h3>
+            <div class="concept-card glass-effect">
+                <img src="images/icons/eco.svg" alt="Écologique" class="concept-icon">
+                <h3 class="animated-underline">Écologique</h3>
                 <p>Des tiny houses respectueuses de l'environnement</p>
             </div>
-            <div class="presentation-card glass-effect">
-                <i class="fas fa-map-marker-alt"></i>
-                <h3>Location Saisonnière</h3>
+            <div class="concept-card glass-effect">
+                <img src="images/icons/location.svg" alt="Location Saisonnière" class="concept-icon">
+                <h3 class="animated-underline">Location Saisonnière</h3>
                 <p>Profitez d'un séjour unique dans nos tiny houses, immergées dans les plus beaux paysages de Corrèze.</p>
             </div>
-            <div class="presentation-card glass-effect">
-                <i class="fas fa-handshake"></i>
-                <h3>Partenariat Terrain</h3>
+            <div class="concept-card glass-effect">
+                <img src="images/icons/partnership.svg" alt="Partenariat Terrain" class="concept-icon">
+                <h3 class="animated-underline">Partenariat Terrain</h3>
                 <p>Valorisez votre terrain et générez des revenus réguliers.</p>
             </div>
         </div>
@@ -804,15 +1071,15 @@
         
         <!-- Compteur de partenaires -->
         <div class="partner-stats">
-            <div class="stat-card">
+            <div class="stat-item">
                 <span class="counter" data-target="50">50</span>
                 <span class="stat-label">Partenaires satisfaits</span>
             </div>
-            <div class="stat-card">
+            <div class="stat-item">
                 <span class="counter" data-target="95">95</span>
                 <span class="stat-label">% de taux de satisfaction</span>
             </div>
-            <div class="stat-card">
+            <div class="stat-item">
                 <span class="counter" data-target="120">120</span>
                 <span class="stat-label">Tiny Houses installées</span>
             </div>
@@ -821,46 +1088,46 @@
         <!-- Timeline -->
         <div class="timeline">
             <div class="timeline-item" data-step="1">
-                <div class="timeline-point">
+                <div class="timeline-icon">
                     <i class="fas fa-handshake"></i>
                 </div>
-                <div class="timeline-step">
+                <div class="timeline-content">
                     <h3>Premier Contact</h3>
                     <p>Échangeons sur votre projet et vos objectifs</p>
                 </div>
             </div>
             <div class="timeline-item" data-step="2">
-                <div class="timeline-point">
+                <div class="timeline-icon">
                     <i class="fas fa-map-marked-alt"></i>
                 </div>
-                <div class="timeline-step">
+                <div class="timeline-content">
                     <h3>Étude de Site</h3>
                     <p>Analyse du terrain et des opportunités</p>
                 </div>
             </div>
             <div class="timeline-item" data-step="3">
-                <div class="timeline-point">
+                <div class="timeline-icon">
                     <i class="fas fa-calculator"></i>
                 </div>
-                <div class="timeline-step">
+                <div class="timeline-content">
                     <h3>Plan d'Investissement</h3>
                     <p>Simulation financière personnalisée</p>
                 </div>
             </div>
             <div class="timeline-item" data-step="4">
-                <div class="timeline-point">
+                <div class="timeline-icon">
                     <i class="fas fa-file-signature"></i>
                 </div>
-                <div class="timeline-step">
+                <div class="timeline-content">
                     <h3>Signature</h3>
                     <p>Finalisation du partenariat</p>
                 </div>
             </div>
             <div class="timeline-item" data-step="5">
-                <div class="timeline-point">
+                <div class="timeline-icon">
                     <i class="fas fa-home"></i>
                 </div>
-                <div class="timeline-step">
+                <div class="timeline-content">
                     <h3>Installation</h3>
                     <p>Livraison et mise en service</p>
                 </div>
